# serializer version: 1
# name: test_phases
  Phases(voltage_phase_l1=229.0, voltage_phase_l2=0.0, voltage_phase_l3=0.0, current_phase_l1=4.0, current_phase_l2=0.0, current_phase_l3=0.0, power_consumed_phase_l1=863, power_consumed_phase_l2=0, power_consumed_phase_l3=0, power_produced_phase_l1=0, power_produced_phase_l2=0, power_produced_phase_l3=0)
# ---
# name: test_settings
  Settings(gas_consumption_price=0.86687, energy_consumption_price_high=0.24388, energy_consumption_price_low=0.22311, energy_production_price_high=0.24388, energy_production_price_low=0.22311)
# ---
# name: test_smartmeter
  SmartMeter(gas_consumption=2289.967, energy_tariff_period=<EnergyTariff.LOW: 'low'>, power_consumption=935, energy_consumption_high=2996.141, energy_consumption_low=5436.256, power_production=0, energy_production_high=4408.947, energy_production_low=1575.502)
# ---
# name: test_watermeter
  WaterMeter(consumption_day=128.0, consumption_total=1640.399, pulse_count=128.0)
# ---
